@@ -1100,6 +1100,7 @@
 					<argLine>
 						--add-opens=java.base/java.util=ALL-UNNAMED
 						--add-opens=java.base/java.lang=ALL-UNNAMED
+						--add-opens=java.base/java.lang.reflect=ALL-UNNAMED
 						--add-opens=java.base/java.io=ALL-UNNAMED
 						--add-opens=java.base/java.net=ALL-UNNAMED
 						--add-opens=java.base/java.time=ALL-UNNAMED
